Fix spacing and sizing for message cards

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,3 +16,7 @@
 body {
   margin: 50px;
 }
+
+.card {
+  margin: 5px 0;
+}
